			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04g: *********************************
IMP: (3/3/06, RK) Add NCC Annotation to Cell throws serialization exception. Due to new client/server model. (Bugzilla# 844)

IMP: (3/2/06, GVG) Adding DRC and AreaCoverage regression tests in main code.

IMP: (3/2/06, GVG) DRC Exclusion working hierarchically (Bug #841)

IMP: (3/2/06, GVG) DRC Exclusion nodes available as annular rings (Bug #842)

IMP: (3/2/06, RK) Support for highlighting equivalent Networks and NodeInsts

************************* Version 8.04f: *********************************

BUG: (3/2/06, GVG) Wrong initialization on Mac. Class MacOSXInterface was moved to tool.user package (#bug 837)
FIX: Change in class load path.

BUG: (3/1/06, SMR) Waveform window doesn't draw signals with only 1 data point (Bug #836).
FIX: In Panel.processSignals() draw extrapolation of last data point.

BUG: (3/1/06, SMR) Spice model files cannot be changed (Bug #840).
FIX: Made them preferences instead of storing them in cells.

BUG: (3/1/06, SMR) Cannot create attributes (Bug #838).
FIX: In Attributes.checkName(), detect existing attributes properly.

BUG: (3/1/06, SMR) "Cleanup Pins" doesn't work (Bug #839)
FIX: Made parameters all be serializable.

BUG: (3/1/06, SMR) R-Tree fails to find objects.
FIX: Use Epsilon when searching the tree.

BUG: (3/1/06, SMR) HSpice output parser doesn't handle ".ic0" files (Bug #834).
FIX: Recognize the extension and give an error (.ic0 is the same as .sw0).

BUG: (2/28/06, GVG) NodeInst objects created for the TechPalette have problems with parent field (null)
and being linked. Thus ENodeInst constructor will produce assertion (Bug #835).
FIX: PlaceNewNode doesn't require NodeInst object (data required is copied). Side effect: Orientation is serializable.

BUG: (2/28/06, SMR) When preferences have side-effects, they crash (Bug #815).