@@ -3,6 +3,9 @@
 NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04g: *********************************
+
+IMP: (3/3/06, GVG) New Spice engine in SpiceTab. This is for those running HSpice for Assura.
+
 IMP: (3/3/06, RK) Add NCC Annotation to Cell throws serialization exception. Due to new client/server model. (Bugzilla# 844)
 
 IMP: (3/2/06, GVG) Adding DRC and AreaCoverage regression tests in main code.
